--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy:v4a
-  api_user:
+    image: reverseproxy
+  backend-user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user:v4a
-  api_feed:
+    image: udagram-api-user
+  backend-feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed:v4a
+    image: udagram-api-feed
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend:local
+    image: udagram-frontend:v1
